--- a/LabVM/Vagrantfile
+++ b/LabVM/Vagrantfile
@@ -1,12 +1,17 @@
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/focal64"
-    config.vm.synced_folder "shared/", "/shared", create: true
-    config.vm.synced_folder ".", "/vagrant", disabled: true
+    config.vm.hostname = "labvm.local"
+    config.vm.synced_folder ".", "/vagrant"
+    config.vm.network "forwarded_port", guest: 8080, host: 8080
     config.vm.provider "virtualbox" do |v|
-        v.name = "LabVM"
-        v.customize ["modifyvm", :id, "--cpuexecutioncap", "75"]
-        v.memory = 2048
-        v.cpus = 2
-      end
-      
-  end
+      v.name = "LabVM"
+      v.customize ["modifyvm", :id, "--cpuexecutioncap", "75"]
+      v.memory = 2048
+      v.cpus = 2
+    end
+
+    config.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "labvm-playbook.yaml"
+    end      
+
+end
